--- a/project/index.html
+++ b/project/index.html
@@ -2,9 +2,68 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>Product name</title>
+	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-	
+	<div class="wraper">
+		<main>
+			<section class="product">
+				<h1></h1>
+				<ul>
+					<li></li>
+					<li></li>
+					<li></li>
+					<li></li>
+				</ul>
+				<img src="" alt="Product photo">				
+			</section>
+			<section class="about_product">
+				<h2 class="about_product_head"></h2>
+				<p></p>
+				<p></p>
+				<figure>
+					<figcaption></figcaption>	
+					<img src="" alt="Alternative Product photo">
+				</figure>
+			</section>
+			<section class="product_benefits">
+				<h2></h2>
+			</section>
+			<section class="scrinshots">
+				<h2></h2>			
+			</section>
+			<section class="rewiews">
+				<h2></h2>
+			</section>
+			<section class="buy_it_now">
+				<h2></h2>
+				<div></div>
+				<div></div>
+				<div></div>
+			</section>	
+		</main>			
+		<footer>
+			<div class="contacts_form">
+				
+			</div>
+			<div class="social_icons">
+				<ul class="contacts_info">
+					<li class="skype"></li>
+					<li class="icq"></li>
+					<li class="e-mail"></li>
+					<li class="phone"></li>
+				</ul>
+				<div class="social_media">
+					<a href=""></a>
+					<a href=""></a>
+					<a href=""></a>
+					<a href=""></a>
+					<a href=""></a>
+				</div>			
+			</div>				
+		</footer>
+	</div>
+	<div class="copyright"></div>
 </body>
 </html>
