--- a/project/index.html
+++ b/project/index.html
@@ -8,42 +8,43 @@
 <body>
 	<div class="wraper">
 		<main>
-			<section class="product">
-				<h1></h1>
-				<ul>
-					<li></li>
-					<li></li>
-					<li></li>
-					<li></li>
+			<section class="product dark-bg paddings">
+				<img src="img/product_img.png" alt="Product photo">	
+				<h1>Product name</h1>
+				<ul class="product_info">
+					<li>Put on&nbsp;this page information about your product</li>
+					<li>A&nbsp;detailed description of&nbsp;your product</li>
+					<li>Tell&nbsp;us about the advantages and merits</li>
+					<li>Associate the page with the payment system</li>
 				</ul>
-				<img src="" alt="Product photo">				
 			</section>
-			<section class="about_product">
-				<h2 class="about_product_head"></h2>
-				<p></p>
-				<p></p>
+			<section class="about_product paddings">
 				<figure>
-					<figcaption></figcaption>	
-					<img src="" alt="Alternative Product photo">
+					<img src="img/video.png" alt="Alternative Product photo">
+					<figcaption>Alternative Product photo</figcaption>	
 				</figure>
+				<h2 class="left">About your product</h2>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis facilis fuga, illo&nbsp;at. Natus eos, eligendi illum rerum omnis porro&nbsp;ex, magni, explicabo veniam incidunt in&nbsp;quam sapiente ut&nbsp;ipsum.</p>
+<p>Pariatur iure ab&nbsp;sunt nesciunt, quibusdam odio iste cumque itaque, ipsa vel exercitationem ullam quos aut nostrum cupiditate fuga quaerat quam animi dolores. Sequi itaque, unde perferendis nemo debitis dolor.</p>
 			</section>
-			<section class="product_benefits">
-				<h2></h2>
+			<section class="product_benefits paddings grey-bg">
+				<h2>Dignity and pluses product</h2>
 			</section>
-			<section class="scrinshots">
-				<h2></h2>			
+			<section class="scrinshots paddings">
+				<h2>Screenshots</h2>			
 			</section>
-			<section class="rewiews">
-				<h2></h2>
+			<section class="rewiews paddings grey-bg">
+				<h2>Reviews</h2>
 			</section>
-			<section class="buy_it_now">
-				<h2></h2>
+			<section class="buy_it_now paddings">
+				<h2>Buy it now</h2>
 				<div></div>
 				<div></div>
 				<div></div>
 			</section>	
 		</main>			
-		<footer>
+		<footer class="paddings dark-bg white-font">
+			<h2 class="white-font">Contacts</h2>
 			<div class="contacts_form">
 				
 			</div>
@@ -64,6 +65,6 @@
 			</div>				
 		</footer>
 	</div>
-	<div class="copyright"></div>
+	<div class="copyright">Copyright &copy;&nbsp;2014 Product name &middot; PSD HTML&nbsp;CSS</div>
 </body>
 </html>
