Добавление элементов в два блока

--- a/project/index.html
+++ b/project/index.html
@@ -29,6 +29,24 @@
 			</section>
 			<section class="product_benefits paddings grey-bg">
 				<h2>Dignity and pluses product</h2>
+					<details>
+						<summary>Delectus dolorem vero quae beatae quasi dolor deserunt iste amet atque, impedit iure placeat, ullam. Reprehenderit aliquam, nemo cum velit ratione perferendis quas, maxime, quaerat porro totam, dolore minus inventore.</summary>
+					</details>
+					<details>
+						<summary>Delectus dolorem vero quae beatae quasi dolor deserunt iste amet atque, impedit iure placeat, ullam. Reprehenderit aliquam, nemo cum velit ratione perferendis quas, maxime, quaerat porro totam, dolore minus inventore.</summary>
+					</details>
+					<details>
+						<summary>Delectus dolorem vero quae beatae quasi dolor deserunt iste amet atque, impedit iure placeat, ullam. Reprehenderit aliquam, nemo cum velit ratione perferendis quas, maxime, quaerat porro totam, dolore minus inventore.</summary>
+					</details>
+					<details>
+						<summary>Delectus dolorem vero quae beatae quasi dolor deserunt iste amet atque, impedit iure placeat, ullam. Reprehenderit aliquam, nemo cum velit ratione perferendis quas, maxime, quaerat porro totam, dolore minus inventore.</summary>
+					</details>
+					<details>
+						<summary>Delectus dolorem vero quae beatae quasi dolor deserunt iste amet atque, impedit iure placeat, ullam. Reprehenderit aliquam, nemo cum velit ratione perferendis quas, maxime, quaerat porro totam, dolore minus inventore.</summary>
+					</details>
+					<details>
+						<summary>Delectus dolorem vero quae beatae quasi dolor deserunt iste amet atque, impedit iure placeat, ullam. Reprehenderit aliquam, nemo cum velit ratione perferendis quas, maxime, quaerat porro totam, dolore minus inventore.</summary>
+					</details>																
 			</section>
 			<section class="scrinshots paddings">
 				<h2>Screenshots</h2>			
@@ -38,9 +56,51 @@
 			</section>
 			<section class="buy_it_now paddings">
 				<h2>Buy it now</h2>
-				<div></div>
-				<div></div>
-				<div></div>
+				<div class="tariff">
+					<h3>Standart</h3>
+					<div class="price"><span>100</span></div>
+					<ol>
+						<li>Porro officia cumque sint deleniti; </li>
+						<li>Тemo facere rem vitae odit;</li>
+						<li>Cum odio, iste quia doloribus autem; </li>
+						<li>Aperiam nulla ea neque.</li>
+					</ol>
+					<button>Buy</button>
+				</div>
+				<div class="tariff">
+					<h3>Premium</h3>
+					<div class="price"><span>150</span></div>
+					<ol>
+						<li>Porro officia cumque sint deleniti; </li>
+						<li>Тemo facere rem vitae odit;</li>
+						<li>Cum odio, iste quia doloribus autem; </li>
+						<li>Aperiam nulla ea neque.</li>
+						<li>Porro officia cumque sint deleniti; </li>
+						<li>Тemo facere rem vitae odit;</li>
+						<li>Cum odio, iste quia doloribus autem; </li>
+						<li>Aperiam nulla ea neque.</li>						
+					</ol>
+					<button>Buy</button>
+				</div>
+				<div class="tariff">
+					<h3>Lux</h3>
+					<div class="price"><span>200</span></div>
+					<ol>
+						<li>Porro officia cumque sint deleniti; </li>
+						<li>Тemo facere rem vitae odit;</li>
+						<li>Cum odio, iste quia doloribus autem; </li>
+						<li>Aperiam nulla ea neque.</li>
+						<li>Porro officia cumque sint deleniti; </li>
+						<li>Тemo facere rem vitae odit;</li>
+						<li>Cum odio, iste quia doloribus autem; </li>
+						<li>Aperiam nulla ea neque.</li>
+						<li>Porro officia cumque sint deleniti; </li>
+						<li>Тemo facere rem vitae odit;</li>
+						<li>Cum odio, iste quia doloribus autem; </li>
+						<li>Aperiam nulla ea neque.</li>												
+					</ol>
+					<button>Buy</button>
+				</div>
 			</section>	
 		</main>			
 		<footer class="paddings dark-bg white-font">
