--- a/project/index.html
+++ b/project/index.html
@@ -3,13 +3,14 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Product name</title>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">	
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 	<div class="wraper">
 		<main>
 			<section class="product dark-bg paddings">
-				<img src="img/product_img.png" alt="Product photo">	
+				<img src="img/product_img.png" width="469px" height="214px" alt="Product photo">	
 				<h1>Product name</h1>
 				<ul class="product_info">
 					<li>Put on&nbsp;this page information about your product</li>
@@ -19,10 +20,11 @@
 				</ul>
 			</section>
 			<section class="about_product paddings">
-				<figure>
-					<img src="img/video.png" alt="Alternative Product photo">
-					<figcaption>Alternative Product photo</figcaption>	
-				</figure>
+				<video width="430" height="245" controls="controls" poster="img/video.png">
+					<source src="video/" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'>
+					Тег video не поддерживается вашим браузером. 
+					<a href="video/">Скачайте видео</a>.
+				</video>
 				<h2 class="left">About your product</h2>
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis facilis fuga, illo&nbsp;at. Natus eos, eligendi illum rerum omnis porro&nbsp;ex, magni, explicabo veniam incidunt in&nbsp;quam sapiente ut&nbsp;ipsum.</p>
 <p>Pariatur iure ab&nbsp;sunt nesciunt, quibusdam odio iste cumque itaque, ipsa vel exercitationem ullam quos aut nostrum cupiditate fuga quaerat quam animi dolores. Sequi itaque, unde perferendis nemo debitis dolor.</p>
@@ -58,7 +60,7 @@
 				<h2>Buy it now</h2>
 				<div class="tariff">
 					<h3>Standart</h3>
-					<div class="price"><span>100</span></div>
+					<span class="price">100</span>					
 					<ol>
 						<li>Porro officia cumque sint deleniti; </li>
 						<li>Тemo facere rem vitae odit;</li>
@@ -69,7 +71,7 @@
 				</div>
 				<div class="tariff">
 					<h3>Premium</h3>
-					<div class="price"><span>150</span></div>
+					<span class="price">150</span>
 					<ol>
 						<li>Porro officia cumque sint deleniti; </li>
 						<li>Тemo facere rem vitae odit;</li>
@@ -84,7 +86,7 @@
 				</div>
 				<div class="tariff">
 					<h3>Lux</h3>
-					<div class="price"><span>200</span></div>
+					<span class="price">200</span>					
 					<ol>
 						<li>Porro officia cumque sint deleniti; </li>
 						<li>Тemo facere rem vitae odit;</li>
@@ -106,14 +108,19 @@
 		<footer class="paddings dark-bg white-font">
 			<h2 class="white-font">Contacts</h2>
 			<div class="contacts_form">
-				
+				<form action="#" name="contacts_form">
+					<input class="t_date" type="text" name="user_name" placeholder="Your name:">
+					<input class="t_date" type="email" name="user_email" placeholder="Your email:">
+					<textarea placeholder="Your message:"></textarea>
+					<input type="submit" name="send_message" value="Send">
+				</form>
 			</div>
 			<div class="social_icons">
 				<ul class="contacts_info">
-					<li class="skype"></li>
-					<li class="icq"></li>
-					<li class="e-mail"></li>
-					<li class="phone"></li>
+					<li class="skype">here_your_login_skype</li>
+					<li class="icq">279679659</li>
+					<li class="e-mail">psdhtmlcss@mail.ru</li>
+					<li class="phone">80 00 4568 55 55</li>
 				</ul>
 				<div class="social_media">
 					<a href=""></a>
