--- a/project/index.html
+++ b/project/index.html
@@ -3,14 +3,14 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Product name</title>
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">	
+    <script src="https://kit.fontawesome.com/6d3110be47.js" crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 	<div class="wraper">
 		<main>
 			<section class="product dark-bg paddings">
-				<img src="img/product_img.png" width="469px" height="214px" alt="Product photo">	
+				<img src="img/product_img.png" width="469" height="214" alt="Product photo">	
 				<h1>Product name</h1>
 				<ul class="product_info">
 					<li>Put on&nbsp;this page information about your product</li>
@@ -51,10 +51,58 @@
 					</details>																
 			</section>
 			<section class="scrinshots paddings">
-				<h2>Screenshots</h2>			
+				<h2>Screenshots</h2>
+					<div class="screen_item">
+						<img src="img/screen_image.jpg" alt="Image" width="200" height="150">
+						<h3 class="left">The description for the image</h3>
+<p>Pariatur iure ab&nbsp;sunt nesciunt, quibusdam odio iste cumque itaque, ipsa vel exercitationem ullam quos aut nostrum cupiditate fuga quaerat quam animi dolores. Sequi itaque, unde perferendis nemo debitis dolor.</p>
+					</div>
+					<div class="screen_item">
+						<img src="img/screen_image.jpg" alt="Image" width="200" height="150">
+						<h3 class="left">The description for the image</h3>
+<p>Pariatur iure ab&nbsp;sunt nesciunt, quibusdam odio iste cumque itaque, ipsa vel exercitationem ullam quos aut nostrum cupiditate fuga quaerat quam animi dolores. Sequi itaque, unde perferendis nemo debitis dolor.</p>
+					</div>
+					<div class="screen_item">
+						<img src="img/screen_image.jpg" alt="Image" width="200" height="150">
+						<h3 class="left">The description for the image</h3>
+<p>Pariatur iure ab&nbsp;sunt nesciunt, quibusdam odio iste cumque itaque, ipsa vel exercitationem ullam quos aut nostrum cupiditate fuga quaerat quam animi dolores. Sequi itaque, unde perferendis nemo debitis dolor.</p>
+					</div>
+					<div class="screen_item">
+						<img src="img/screen_image.jpg" alt="Image" width="200" height="150">
+						<h3 class="left">The description for the image</h3>
+<p>Pariatur iure ab&nbsp;sunt nesciunt, quibusdam odio iste cumque itaque, ipsa vel exercitationem ullam quos aut nostrum cupiditate fuga quaerat quam animi dolores. Sequi itaque, unde perferendis nemo debitis dolor.</p>
+					</div>
 			</section>
 			<section class="rewiews paddings grey-bg">
-				<h2>Reviews</h2>
+				<h2>Reviews</h2>					
+					<div class="rewiews_item">
+						<figure>
+							<img src="img/userpic.jpg" width="75" height="75" alt="User name">
+						</figure>
+<p>Porro officia cumque sint deleniti nemo facere rem vitae odit inventore cum odio, iste quia doloribus autem aperiam nulla ea&nbsp;neque reprehenderit. Libero doloribus, possimus officiis sapiente necessitatibus commodi consectetur?
+<span>Lourens S.</span></p>
+					</div>
+					<div class="rewiews_item">
+						<figure>
+							<img src="img/userpic.jpg" width="75" height="75" alt="User name">
+						</figure>						
+<p>Porro officia cumque sint deleniti nemo facere rem vitae odit inventore cum odio, iste quia doloribus autem aperiam nulla ea&nbsp;neque reprehenderit. Libero doloribus, possimus officiis sapiente necessitatibus commodi consectetur?
+<span>Lourens S.</span></p>
+					</div>
+					<div class="rewiews_item">
+						<figure>
+							<img src="img/userpic.jpg" width="75" height="75" alt="User name">
+						</figure>						
+<p>Porro officia cumque sint deleniti nemo facere rem vitae odit inventore cum odio, iste quia doloribus autem aperiam nulla ea&nbsp;neque reprehenderit. Libero doloribus, possimus officiis sapiente necessitatibus commodi consectetur?
+<span>Lourens S.</span></p>
+					</div>					
+					<div class="rewiews_item">
+						<figure>
+							<img src="img/userpic.jpg" width="75" height="75" alt="User name">
+						</figure>						
+<p>Porro officia cumque sint deleniti nemo facere rem vitae odit inventore cum odio, iste quia doloribus autem aperiam nulla ea&nbsp;neque reprehenderit. Libero doloribus, possimus officiis sapiente necessitatibus commodi consectetur?
+<span>Lourens S.</span></p>
+					</div>
 			</section>
 			<section class="buy_it_now paddings">
 				<h2>Buy it now</h2>
@@ -116,18 +164,16 @@
 				</form>
 			</div>
 			<div class="social_icons">
-				<ul class="contacts_info">
-					<li class="skype">here_your_login_skype</li>
-					<li class="icq">279679659</li>
-					<li class="e-mail">psdhtmlcss@mail.ru</li>
-					<li class="phone">80 00 4568 55 55</li>
-				</ul>
+				<span class="skype">here_your_login_skype</span>
+				<span class="icq">279679659</span>
+				<span class="e-mail">psdhtmlcss@mail.ru</span>
+				<span class="phone">80 00 4568 55 55</span>
 				<div class="social_media">
-					<a href=""></a>
-					<a href=""></a>
-					<a href=""></a>
-					<a href=""></a>
-					<a href=""></a>
+					<a href="#"><i class="fab fa-twitter"></i></a>
+					<a href="#"><i class="fab fa-facebook-f"></i></a>
+					<a href="#"><i class="fab fa-linkedin-in"></i></a>
+					<a href="#"><i class="fab fa-google"></i></a>
+					<a href="#"><i class="fab fa-youtube"></i></a>
 				</div>			
 			</div>				
 		</footer>
