Завершение тестового макета + начало верстки основного

--- a/project/index.html
+++ b/project/index.html
@@ -52,57 +52,57 @@
 			</section>
 			<section class="scrinshots paddings">
 				<h2>Screenshots</h2>
-					<div class="screen_item">
-						<img src="img/screen_image.jpg" alt="Image" width="200" height="150">
-						<h3 class="left">The description for the image</h3>
+				    <figure class="screen_item">
+				    	<img src="img/screen_image.jpg" alt="Image" width="200" height="150">
+					    <figcaption>
+<h3 class="left">The description for the image</h3>
 <p>Pariatur iure ab&nbsp;sunt nesciunt, quibusdam odio iste cumque itaque, ipsa vel exercitationem ullam quos aut nostrum cupiditate fuga quaerat quam animi dolores. Sequi itaque, unde perferendis nemo debitis dolor.</p>
-					</div>
-					<div class="screen_item">
-						<img src="img/screen_image.jpg" alt="Image" width="200" height="150">
-						<h3 class="left">The description for the image</h3>
+					    </figcaption>
+				    </figure>
+				    <figure class="screen_item">
+				    	<img src="img/screen_image.jpg" alt="Image" width="200" height="150">
+					    <figcaption>
+<h3 class="left">The description for the image</h3>
 <p>Pariatur iure ab&nbsp;sunt nesciunt, quibusdam odio iste cumque itaque, ipsa vel exercitationem ullam quos aut nostrum cupiditate fuga quaerat quam animi dolores. Sequi itaque, unde perferendis nemo debitis dolor.</p>
-					</div>
-					<div class="screen_item">
-						<img src="img/screen_image.jpg" alt="Image" width="200" height="150">
-						<h3 class="left">The description for the image</h3>
+					    </figcaption>
+				    </figure>
+				    <figure class="screen_item">
+				    	<img src="img/screen_image.jpg" alt="Image" width="200" height="150">
+					    <figcaption>
+<h3 class="left">The description for the image</h3>
 <p>Pariatur iure ab&nbsp;sunt nesciunt, quibusdam odio iste cumque itaque, ipsa vel exercitationem ullam quos aut nostrum cupiditate fuga quaerat quam animi dolores. Sequi itaque, unde perferendis nemo debitis dolor.</p>
-					</div>
-					<div class="screen_item">
-						<img src="img/screen_image.jpg" alt="Image" width="200" height="150">
-						<h3 class="left">The description for the image</h3>
+					    </figcaption>
+				    </figure>
+				    <figure class="screen_item">
+				    	<img src="img/screen_image.jpg" alt="Image" width="200" height="150">
+					    <figcaption>
+<h3 class="left">The description for the image</h3>
 <p>Pariatur iure ab&nbsp;sunt nesciunt, quibusdam odio iste cumque itaque, ipsa vel exercitationem ullam quos aut nostrum cupiditate fuga quaerat quam animi dolores. Sequi itaque, unde perferendis nemo debitis dolor.</p>
-					</div>
+					    </figcaption>
+				    </figure>
 			</section>
 			<section class="rewiews paddings grey-bg">
 				<h2>Reviews</h2>					
 					<div class="rewiews_item">
-						<figure>
-							<img src="img/userpic.jpg" width="75" height="75" alt="User name">
-						</figure>
+<img src="img/userpic.jpg" width="75" height="75" alt="User name">										
 <p>Porro officia cumque sint deleniti nemo facere rem vitae odit inventore cum odio, iste quia doloribus autem aperiam nulla ea&nbsp;neque reprehenderit. Libero doloribus, possimus officiis sapiente necessitatibus commodi consectetur?
 <span>Lourens S.</span></p>
-					</div>
+					</div>	
 					<div class="rewiews_item">
-						<figure>
-							<img src="img/userpic.jpg" width="75" height="75" alt="User name">
-						</figure>						
+<img src="img/userpic.jpg" width="75" height="75" alt="User name">										
 <p>Porro officia cumque sint deleniti nemo facere rem vitae odit inventore cum odio, iste quia doloribus autem aperiam nulla ea&nbsp;neque reprehenderit. Libero doloribus, possimus officiis sapiente necessitatibus commodi consectetur?
 <span>Lourens S.</span></p>
-					</div>
+					</div>	
 					<div class="rewiews_item">
-						<figure>
-							<img src="img/userpic.jpg" width="75" height="75" alt="User name">
-						</figure>						
+<img src="img/userpic.jpg" width="75" height="75" alt="User name">										
 <p>Porro officia cumque sint deleniti nemo facere rem vitae odit inventore cum odio, iste quia doloribus autem aperiam nulla ea&nbsp;neque reprehenderit. Libero doloribus, possimus officiis sapiente necessitatibus commodi consectetur?
 <span>Lourens S.</span></p>
 					</div>					
 					<div class="rewiews_item">
-						<figure>
-							<img src="img/userpic.jpg" width="75" height="75" alt="User name">
-						</figure>						
+<img src="img/userpic.jpg" width="75" height="75" alt="User name">										
 <p>Porro officia cumque sint deleniti nemo facere rem vitae odit inventore cum odio, iste quia doloribus autem aperiam nulla ea&nbsp;neque reprehenderit. Libero doloribus, possimus officiis sapiente necessitatibus commodi consectetur?
 <span>Lourens S.</span></p>
-					</div>
+					</div>	
 			</section>
 			<section class="buy_it_now paddings">
 				<h2>Buy it now</h2>
